--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section id="home" class="hero">
         <h1>Welcome to Cosmic Timeline</h1>
-        <p>A Decentralized Universe of Farming, Business, and Digital Ownership</p>
+        <p>Cosmic Timeline The Future of Decentralized Gaming & Virtual Economies Cosmic Timeline is a next-generation Web3 gaming and cryptocurrency ecosystem that merges decentralized governance, interactive gameplay, and NFT integration. Our goal is to create a fully community-driven digital universe where players earn, trade, and invest in a self-sustaining, blockchain-powered economy.</p>
         <a href="#about" class="btn">Learn More</a>
     </section>
 
