--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
     </section>
 
     <section id="about">
-        <h2>About Cosmic Timeline</h2>
-        <p>Cosmic Timeline is a Web3-powered gaming ecosystem that merges cryptocurrency, NFTs, and community-driven governance. Players cultivate cosmic farms, build businesses, and shape a new digital economy.</p>
+        <h2>Cosmic Timeline overview</h2>
+        <p>Welcome to Cosmic Timeline, a Web3-powered gaming and cryptocurrency ecosystem that revolutionizes how players interact with digital worlds. By merging decentralized governance, play-to-earn mechanics, NFT integration, and dynamic tokenomics, Cosmic Timeline offers a community-driven metaverse where players can farm, build businesses, engage in social interactions, and earn real-world value.
+
+​
+
+At the heart of our ecosystem are two interconnected games, Cosmic Farmer and Cosmic Realm, along with our CosmoSprout Token (COSMOSPROUT) and Cosmo Kitty NFTs, creating an immersive and rewarding experience for all players.</p>
     </section>
 
     <section id="games">
